# SPE_mini

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml
configs/ansible/: ansible.cfg
configs/ansible/playbooks/: deploy_calculator.yml
configs/ngrok/: ngrok.yml
docs/: report-template.md  report.tex
scripts/: deploy_with_ansible.sh  start_ngrok.sh
spe_calculator/: api.py  calculator.py  main.py
tests/: test_api.py  test_calculator.py
