[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spe-calculator"
version = "0.1.0"
description = "Scientific calculator CLI and HTTP API for the SPE mini project."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Swaroop", email = "swaroop@example.com" }]
dependencies = [
    "fastapi>=0.112,<0.114",
    "uvicorn[standard]>=0.30,<0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27,<0.28",
    "build>=1.2.0,<2.0.0",
]

[project.scripts]
spe-calculator = "spe_calculator.main:main"

[tool.setuptools]
packages = ["spe_calculator"]
